--- a/ack/prd/magnolia-public-backend.yaml
+++ b/ack/prd/magnolia-public-backend.yaml
@@ -33,14 +33,7 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-11-19T17:16:12+08:00"
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
-        vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
-        vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
-        vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/prd
-        vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
+        kubectl.kubernetes.io/restartedAt: "2024-11-19T17:16:12+08:00"       
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: magnolia-public-backend
@@ -67,7 +60,7 @@ spec:
               value: "prd"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+          image: "registry.cn-chengdu.aliyuncs.com/sph-prd/magnolia-public-backend:v"
           imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
@@ -107,16 +100,13 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              cpu: "14"
-              memory: 28Gi
-            requests:
-              cpu: "14"
-              memory: 28Gi
+              cpu: "2"
+              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
-        - name: aws-ecr
+        - name: sph-ack-test
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
