--- a/ack/prd/magnolia-author-backend.yaml
+++ b/ack/prd/magnolia-author-backend.yaml
@@ -20,16 +20,6 @@ spec:
     type: RollingUpdate
   template:
     metadata:
-      annotations:
-        karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:41:20+08:00"
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
-        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
-        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
-        vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
-        vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: magnolia-author-backend
@@ -55,7 +45,7 @@ spec:
               value: "prd"
             - name: INSTANCE_TYPE
               value: "magnoliaAuthor"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
+          image: "registry.cn-chengdu.aliyuncs.com/sph-prd/magnolia-author-backend:v"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
           ports:
@@ -104,7 +94,7 @@ spec:
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
-        - name: aws-ecr
+        - name: sph-ack-test
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
