--- a/ack/prd/saas-homework-service.yaml
+++ b/ack/prd/saas-homework-service.yaml
@@ -21,7 +21,7 @@ metadata:
   namespace: zb-schools
 spec:
   progressDeadlineSeconds: 600
-  replicas: 3
+  replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -34,15 +34,6 @@ spec:
   template:
     metadata:
       annotations:
-        karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-11-19T15:46:16+08:00"
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
-        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
-        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
-        vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
-        vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-homework-service
@@ -63,8 +54,8 @@ spec:
         - command:
             - /bin/bash
             - "-ce"
-            - java  -Xms2g -Xmx4g -Dnewrelic.environment=prd -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar -server.tomcat.max-threads=1500
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-homework-service"
+            - java  -Xms1g -Xmx2g -Dnewrelic.environment=prd -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar -server.tomcat.max-threads=1500
+          image: "registry.cn-chengdu.aliyuncs.com/sph-prd/saas-homework-service:v"
           imagePullPolicy: IfNotPresent
           env:
             - name: TZ
@@ -86,18 +77,17 @@ spec:
             timeoutSeconds: 2
           resources:
             limits:
-              cpu: "4"
-              memory: 6Gi
+              cpu: "2"
+              memory: 3Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       imagePullSecrets:
-        - name: aws-ecr
+        - name: sph-ack-test
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-      serviceAccountName: service-account-sph-zb-schools
 ---
 apiVersion: v1
 kind: Service
