--- a/ack/prd/saas-homework-service.yaml
+++ b/ack/prd/saas-homework-service.yaml
@@ -34,6 +34,7 @@ spec:
   template:
     metadata:
       annotations:
+        kms-agent-webhook-injector/inject: "true"
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-homework-service
@@ -88,6 +89,7 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      serviceAccountName: zb-schools-sc
 ---
 apiVersion: v1
 kind: Service
