--- a/ack/prd/saas-transfer-service.yaml
+++ b/ack/prd/saas-transfer-service.yaml
@@ -20,7 +20,7 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2025-10-16T02:15:16+08:00"       
+        kms-agent-webhook-injector/inject: "true"
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-transfer-service
@@ -63,6 +63,7 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      serviceAccountName: zb-schools-sc
 ---
 apiVersion: v1
 kind: Service
