--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -138,6 +138,8 @@ data:
         listen  [::]:80;
         server_name  localhost;
         client_max_body_size 1000M;
+        access_log /mnt/access.log main;
+        error_log /mnt/error.log warn;
 
         location / {
                     root /usr/share/nginx/html/qa;
