--- a/ack/sit/saas-transfer-service.yaml
+++ b/ack/sit/saas-transfer-service.yaml
@@ -26,11 +26,7 @@ spec:
         k8s.kuboard.cn/name: saas-transfer-service
     spec:
       containers:
-        - command:
-            - /bin/bash
-            - "-ce"
-            - /opt/app/init.sh
-          env:
+        - env:
             - name: TZ
               value: CST-8
             - name: RUN_ENV
