--- a/ack/sit/saas-transfer-service.yaml
+++ b/ack/sit/saas-transfer-service.yaml
@@ -30,7 +30,7 @@ spec:
             - name: TZ
               value: CST-8
             - name: RUN_ENV
-              value: "sit"
+              value: "inner"
           image: "registry.cn-chengdu.aliyuncs.com/sph-prd/saas-transfer-service:v"
           imagePullPolicy: IfNotPresent
           name: transfer
