--- a/dev/magnolia-author-backend-deploy.yaml
+++ b/dev/magnolia-author-backend-deploy.yaml
@@ -1,23 +1,24 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-generation: 2
+  annotations:
+    k8s.kuboard.cn/workload: magnolia-author-backend
   labels:
-    k8s.kuboard.cn/name: magnolia-author-backend-sts
-  name: magnolia-author-backend-sts
+    k8s.kuboard.cn/name: magnolia-author-backend
+  name: magnolia-author-backend
   namespace: zb-schools
 spec:
-  persistentVolumeClaimRetentionPolicy:
-    whenDeleted: Retain
-    whenScaled: Retain
-  podManagementPolicy: OrderedReady
   replicas: 1
-  revisionHistoryLimit: 3
   selector:
     matchLabels:
-      k8s.kuboard.cn/name: magnolia-author-backend-sts
-  serviceName: magnolia-author-backend-sts-svc
+      k8s.kuboard.cn/name: magnolia-author-backend
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
+
   template:
     metadata:
       annotations:
@@ -29,33 +30,33 @@ spec:
         vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
         vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
         vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/qa"
+        vault.hashicorp.com/namespace: "admin/engr/zb_schools/dev"
       creationTimestamp: null
       labels:
-        k8s.kuboard.cn/name: magnolia-author-backend-sts
+        k8s.kuboard.cn/name: magnolia-author-backend
     spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: k8s.kuboard.cn/name
-                operator: In
-                values:
-                - magnolia-author-backend
-                - saas-homework-service
-            topologyKey: kubernetes.io/hostname
+            - labelSelector:
+                matchExpressions:
+                - key: k8s.kuboard.cn/name
+                  operator: In
+                  values:
+                  - magnolia-public-backend
+                  - saas-homework-service
+              topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
+            - name: BASE_URL
+              value: "https://sit.zbschools.sg/authorFrontend"
             - name: ENV_TYPE
-              value: "qa"
+              value: "sit"
             - name: INSTANCE_TYPE
               value: "magnoliaAuthor"
-            - name: BASE_URL
-              value: "https://uat.zbschools.sg/authorFrontend"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
           ports:
@@ -82,9 +83,6 @@ spec:
               memory: 12Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          volumeMounts:
-             - mountPath: /usr/local/tomcat/webapps/repositories
-               name: pvc-mgnl-author
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -92,26 +90,7 @@ spec:
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-      serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
-  updateStrategy:
-    rollingUpdate:
-      partition: 0
-    type: RollingUpdate
-  volumeClaimTemplates:
-  - apiVersion: v1
-    kind: PersistentVolumeClaim
-    metadata:
-      creationTimestamp: null
-      name: pvc-mgnl-author
-    spec:
-      accessModes:
-      - ReadWriteOnce
-      resources:
-        requests:
-          storage: 5Gi
-      storageClassName: gp2
-      volumeMode: Filesystem
 ---
 apiVersion: v1
 kind: Service
@@ -126,30 +105,4 @@ spec:
   type: ClusterIP
   selector:
     k8s.kuboard.cn/name: magnolia-author-backend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
---- 
-apiVersion: v1
-kind: Service
-metadata:
-  name: magnolia-author-backend-sts-svc
-  namespace: zb-schools
-spec:
-  clusterIP: None
-  clusterIPs:
-  - None
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-  - IPv4
-  ipFamilyPolicy: SingleStack
-  ports:
-  - name: author
-    port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    k8s.kuboard.cn/name: magnolia-author-backend-sts
   sessionAffinity: None
-  type: ClusterIP
