--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -111,7 +111,16 @@ spec:
         requests:
           storage: 5Gi
       storageClassName: gp3
-      volumeMode: Filesystem    
+      volumeMode: Filesystem  
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: gp3
+provisioner: ebs.csi.aws.com
+volumeBindingMode: WaitForFirstConsumer
+parameters:
+  type: gp3      
 ---
 apiVersion: v1
 kind: Service
