--- a/dev/magnolia-public-backend-sts2.yaml
+++ b/dev/magnolia-public-backend-sts2.yaml
@@ -4,8 +4,8 @@ kind: StatefulSet
 metadata:
   generation: 2
   labels:
-    k8s.kuboard.cn/name: magnolia-public-backend-sts
-  name: magnolia-public-backend-sts
+    k8s.kuboard.cn/name: magnolia-public-backend-2-sts
+  name: magnolia-public-backend-2-sts
   namespace: zb-schools
 spec:
   persistentVolumeClaimRetentionPolicy:
@@ -15,9 +15,10 @@ spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
-    matchLabels:
-      k8s.kuboard.cn/name: magnolia-public-backend-sts
-  serviceName: magnolia-public-backend-sts-svc
+    matchLabels: 
+      app: magnolia-public-backend    
+      appn: magnolia-public-backend-2-sts
+  serviceName: magnolia-public-backend-2-headless
   template:
     metadata:
       annotations:
@@ -31,7 +32,8 @@ spec:
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
-        k8s.kuboard.cn/name: magnolia-public-backend-sts
+        app: magnolia-public-backend
+        appn: magnolia-public-backend-2-sts
     spec:
       affinity:
         podAntiAffinity:
@@ -42,7 +44,9 @@ spec:
                 operator: In
                 values:
                 - magnolia-author-backend
-                - magnolia-public-backend-sts
+                - magnolia-public-backend-1-sts
+                - magnolia-public-backend-2-sts
+                - magnolia-public-backend-3-sts
                 - saas-homework-service
             topologyKey: kubernetes.io/hostname
       automountServiceAccountToken: true
@@ -51,7 +55,7 @@ spec:
         - name: TZ
           value: CST-8
         - name: DB_NAME_PUBLIC
-          value: mgnl_public
+          value: mgnl_public_2
         - name: BASE_URL
           value: https://sit.zbschools.sg
         - name: ENV_TYPE
@@ -104,7 +108,7 @@ spec:
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /usr/local/tomcat/webapps/repositories
-          name: pvc-mgnl-public
+          name: pvc-mgnl-public-2
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -121,43 +125,20 @@ spec:
     kind: PersistentVolumeClaim
     metadata:
       creationTimestamp: null
-      name: pvc-mgnl-public
+      name: pvc-mgnl-public-2
     spec:
       accessModes:
       - ReadWriteOnce
       resources:
         requests:
           storage: 5Gi
-      storageClassName: gp2
+      storageClassName: gp3
       volumeMode: Filesystem     
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: magnolia-public-backend-svc
-  namespace: zb-schools
-spec:
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-    - IPv4
-  ipFamilyPolicy: SingleStack
-  ports:
-    - name: public
-      port: 8080
-      protocol: TCP
-      targetPort: 8080
-  selector:
-    k8s.kuboard.cn/name: magnolia-public-backend-sts
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
-  type: ClusterIP
 --- 
 apiVersion: v1
 kind: Service
 metadata:
-  name: magnolia-public-backend-sts-svc
+  name: magnolia-public-backend-2-headless
   namespace: zb-schools
 spec:
   clusterIP: None
@@ -173,6 +154,29 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    k8s.kuboard.cn/name: magnolia-public-backend-sts
+    appn: magnolia-public-backend-2-sts
   sessionAffinity: None
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-svc2
+  namespace: zb-schools
+spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: public
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    appn: magnolia-public-backend-2-sts
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 86400
   type: ClusterIP
