--- a/dev/magnolia-public-backend-dp1.yaml
+++ b/dev/magnolia-public-backend-dp1.yaml
@@ -69,7 +69,7 @@ spec:
                 - key: appn
                   operator: In
                   values:
-                  - magnolia-author-backend
+                  - magnolia-author-backend-1
                   - magnolia-public-backend-1
                   - magnolia-public-backend-2
                   - magnolia-public-backend-3
@@ -87,7 +87,7 @@ spec:
               value: "sit"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend:b722b065"
+          image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
