--- a/prd/magnolia-public-backend-dp3.yaml
+++ b/prd/magnolia-public-backend-dp3.yaml
@@ -1,63 +1,90 @@
 ---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: gp3-ebs
+provisioner: kubernetes.io/aws-ebs
+volumeBindingMode: WaitForFirstConsumer
+parameters:
+  type: gp3
+  fsType: ext4
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc-public-3
+  namespace: zb-schools
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: gp3-ebs
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: policy/v1
+kind: PodDisruptionBudget
+metadata:
+  name: magnolia-public-backend-pdb
+  namespace: zb-schools
+spec:
+  minAvailable: 1
+  selector:
+    matchLabels:
+      app: magnolia-public-backend
+---
 apiVersion: apps/v1
-kind: Deployment
+kind: Deployment 
 metadata:
   annotations:
-    k8s.kuboard.cn/workload: magnolia-public-backend
+    app: magnolia-public-backend
   labels:
-    k8s.kuboard.cn/name: magnolia-public-backend
-  name: magnolia-public-backend
+    app: magnolia-public-backend
+    appn: magnolia-public-backend-3
+  name: magnolia-public-backend-3
   namespace: zb-schools
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s.kuboard.cn/name: magnolia-public-backend
+      app: magnolia-public-backend
+      appn: magnolia-public-backend-3
   strategy:
     rollingUpdate:
-      maxSurge: 1
+      maxSurge: 3
       maxUnavailable: 0
     type: RollingUpdate
   template:
     metadata:
       annotations:
-        karpenter.sh/do-not-disrupt: "true"
-        kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
+        kubectl.kubernetes.io/restartedAt: "2024-11-19T17:16:12+08:00"
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
         vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
         vault.hashicorp.com/log-level: debug
-        vault.hashicorp.com/namespace: admin/engr/zb_schools/qa
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/prd
         vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
-        k8s.kuboard.cn/name: magnolia-public-backend
+        app: magnolia-public-backend
+        appn: magnolia-public-backend-3
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: k8s.kuboard.cn/name
-                operator: In
-                values:
-                - saas-homework-service
-                - magnolia-author-backend
-            topologyKey: kubernetes.io/hostname
       containers:
         - env:
             - name: TZ
               value: CST-8
+            - name: DB_NAME_PUBLIC
+              value: mgnl_public_3
+            - name: BASE_URL
+              value: "https://www.zbschools.sg"
             - name: ENV_TYPE
-              value: "qa"
+              value: "prd"
             - name: INSTANCE_TYPE
               value: "magnoliaPublic"
-            - name: BASE_URL
-              value: "https://uat.zbschools.sg"
           image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
             - containerPort: 8080
@@ -84,13 +111,6 @@ spec:
             periodSeconds: 5
             successThreshold: 1
             timeoutSeconds: 2
-          resources:
-            limits:
-              cpu: "4"
-              memory: 12Gi
-            requests:
-              cpu: "4"
-              memory: 12Gi
           livenessProbe:
             failureThreshold: 6
             httpGet:
@@ -101,8 +121,22 @@ spec:
             periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              cpu: "12"
+              memory: 24Gi
+            requests:
+              cpu: "12"
+              memory: 24Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          volumeMounts:
+            - mountPath: /usr/local/tomcat/webapps/repositories
+              name: pvc-public
+      volumes:
+        - name: pvc-public
+          persistentVolumeClaim:
+             claimName: pvc-public-3
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -129,7 +163,30 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    k8s.kuboard.cn/name: magnolia-public-backend
+    app: magnolia-public-backend
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 86400
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-svc3
+  namespace: zb-schools
+spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: public
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    appn: magnolia-public-backend-3
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
