--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -55,7 +55,7 @@ spec:
               value: "magnoliaAuthor"
             - name: BASE_URL
               value: "https://uat.zbschools.sg/authorFrontend"
-          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
+          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend:1.2.144.20251212"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
           ports:
@@ -110,17 +110,8 @@ spec:
       resources:
         requests:
           storage: 5Gi
-      storageClassName: gp3
+      storageClassName: gp2
       volumeMode: Filesystem
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: gp3
-provisioner: ebs.csi.aws.com
-volumeBindingMode: WaitForFirstConsumer
-parameters:
-  type: gp3
 ---
 apiVersion: v1
 kind: Service
