--- a/prd/magnolia-public-frontend.yaml
+++ b/prd/magnolia-public-frontend.yaml
@@ -251,8 +251,5 @@ spec:
   type: ClusterIP
   selector:
     k8s.kuboard.cn/name: magnolia-public-frontend
-  sessionAffinity: ClientIP
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 86400
+  sessionAffinity: None 
 
