--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -125,7 +125,7 @@ spec:
       protocol: TCP
   type: ClusterIP
   selector:
-    k8s.kuboard.cn/name: magnolia-author-backend
+    k8s.kuboard.cn/name: magnolia-author-backend-sts
   sessionAffinity: ClientIP
   sessionAffinityConfig:
     clientIP:
